--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poller+One&display=swap" rel="stylesheet">
+  <link href="https://www.fontspace.com/boba-fonts/star-jedi-outline?" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
