--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <title>Swapilicious</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:; default-src 'self' http://121.0.0:4200/"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Poller+One&display=swap" rel="stylesheet">
-  <link href="https://www.fontspace.com/boba-fonts/star-jedi-outline?" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Poller+One&display=swap" rel="stylesheet"> -->
 </head>
 <body>
   <app-root></app-root>
